Se añaden verificaciones de seugirdad